Added Experience Section

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="./assets/hero_blob2.svg" class="hero-image d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="300" height="300" loading="lazy">
-        <img src="./assets/hero_blob1.svg" class="hero-image d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
+        <img src="./assets/hero_blob2.svg" class="hero-image d-block mx-lg-auto img-fluid" width="300" height="300" loading="lazy">
+        <img src="./assets/hero_blob1.svg" class="hero-image d-block mx-lg-auto img-fluid" width="400" height="300" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-1 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Jack!</h1>
         <p class="lead"><em>Developer, coder, programmer</em></p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Let's chat?</button>
+          <button type="button" class="btn btn-outline-success btn-lg px-4 me-md-2">Let's chat?</button>
         </div>
       </div>
     </div>
@@ -80,6 +80,38 @@
                 <p class="text-body-secondary">Anything from Elden Ring to Rocket League to Minecraft. I’ve always had a passion for gaming and pursued this with a degree in Games Development.</p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <!--Experience Section-->
+  <section id="experience">
+    <div class="container px-4 py-5" id="featured-3">
+        <h2 class="fw-bold display-3 text-body-emphasis">Experience</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="feature col">
+            <h3 class="fs-2 text-body-emphasis">Junior Software Developer</h3>
+            <h5>Start December 2024</h5>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          </div>
+          <div class="feature col">
+            <h3 class="fs-2 text-body-emphasis">CODE Lancashire</h3>
+            <h5>May 2023 - July 2023</h5>
+            <ul>
+                <li>Completed a 12-Week course surrounding Web development and Data Science and obtained a Certificate of Achievement.
+                </li>
+                <li>Created a Functional Web App using Next.js for the Front End and FastAPI as the Back End while also learning about Data Science using Python.
+                </li>
+            </ul>
+          </div>
+          <div class="feature col">
+            <h3 class="fs-2 text-body-emphasis">Computer Games Development</h3>
+            <h5>September 2014 - May 2018</h5>
+            <ul>
+                <li>Completed a 3-year course studying Game Development. These included creating a final-year project in which I focused primarily on Collision Detection by creating a table pool game.</li>
+                <li>Studied various languages surrounding Gamer Development including C#, C++ and JavaScript.</li>
+            </ul>
           </div>
         </div>
       </div>
